<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TasbehScrollingActivity"
    tools:showIn="@layout/activity_scrolling_tasbeh">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/caed1_tasbeh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baradareqa"
                android:foregroundGravity="right"
                android:gravity="right"
                android:text="@string/shada"
                android:textColor="@color/colorAccent"
                android:textSize="60sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2_tasbeh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baradareqa"
                android:foregroundGravity="right"
                android:gravity="right"
                android:text="@string/sobhanallah"
                android:textColor="@color/colorAccent"
                android:textSize="45sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3_tasbeh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="15dp"

            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baradareqa"
                android:foregroundGravity="right"
                android:gravity="right"
                android:text="@string/allahakbr"
                android:textColor="@color/colorAccent"
                android:textSize="55sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card4_tasbeh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorWhite"

            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baradareqa"
                android:foregroundGravity="right"
                android:gravity="right"
                android:text="@string/salahalanaby"
                android:textColor="@color/colorAccent"
                android:textSize="50sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card5_tasbeh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"

            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baradareqa"
                android:foregroundGravity="right"
                android:gravity="right"
                android:text="@string/hamd"
                android:textColor="@color/colorAccent"
                android:textSize="60sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card6_tasbeh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"

            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baradareqa"
                android:foregroundGravity="right"
                android:gravity="right"
                android:text="@string/astgfar"
                android:textColor="@color/colorAccent"
                android:textSize="50sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card7_tasbeh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"

            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baradareqa"
                android:foregroundGravity="right"
                android:gravity="right"
                android:text="@string/lahawl"
                android:textColor="@color/colorAccent"
                android:textSize="40sp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>