<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baradareqa"
                android:foregroundGravity="right"
                android:gravity="right"
                android:text="@string/quran"
                android:textColor="@color/colorAccent"
                android:textSize="60sp"
                app:autoSizeMaxTextSize="80sp"
                app:autoSizeMinTextSize="30sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/quran" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baradareqa"
                android:foregroundGravity="right"
                android:gravity="right"
                android:text="@string/quran_sound"
                android:textColor="@color/colorAccent"
                android:textSize="60sp"
                app:autoSizeMaxTextSize="80sp"
                app:autoSizeMinTextSize="30sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:layout_marginLeft="9dp"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/listening" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"

            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baradareqa"
                android:foregroundGravity="right"
                android:gravity="right"
                android:text="@string/azkar_sabah"
                android:textColor="@color/colorAccent"
                android:textSize="55sp"
                app:autoSizeMaxTextSize="80sp"
                app:autoSizeMinTextSize="30sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:layout_marginLeft="9dp"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/sun" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"

            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baradareqa"
                android:foregroundGravity="right"
                android:gravity="right"
                android:text="@string/azkar_sabah_sot"
                android:textColor="@color/colorAccent"
                android:textSize="45sp"
                app:autoSizeMaxTextSize="80sp"
                app:autoSizeMinTextSize="30sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:layout_marginLeft="9dp"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/listening" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/colorWhite"

            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baradareqa"
                android:foregroundGravity="right"
                android:gravity="right"
                android:text="@string/azkar_masaa"
                android:textColor="@color/colorAccent"
                android:textSize="55sp"
                app:autoSizeMaxTextSize="80sp"
                app:autoSizeMinTextSize="30sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:layout_marginLeft="9dp"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/night" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"

            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baradareqa"
                android:foregroundGravity="right"
                android:gravity="right"
                android:text="@string/azkar_masaa_sot"
                android:textColor="@color/colorAccent"
                android:textSize="45sp"
                app:autoSizeMaxTextSize="80sp"
                app:autoSizeMinTextSize="30sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:layout_marginLeft="9dp"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/listening" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"

            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baradareqa"
                android:foregroundGravity="right"
                android:gravity="right"
                android:text="@string/azkar_noom"
                android:textColor="@color/colorAccent"
                android:textSize="55sp"
                app:autoSizeMaxTextSize="80sp"
                app:autoSizeMinTextSize="30sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:layout_marginLeft="9dp"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/sleep" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"

            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/baradareqa"
                android:foregroundGravity="right"
                android:gravity="right"
                android:text="@string/sbha"
                android:textColor="@color/colorAccent"
                android:textSize="55sp"
                app:autoSizeMaxTextSize="80sp"
                app:autoSizeMinTextSize="30sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:layout_marginLeft="9dp"
                android:foregroundGravity="center"
                android:rotation="-86"
                app:srcCompat="@drawable/rosary" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>